grammar.js
    program: $ => choice($.package, repeat($.packageBody)),

    //////////////
    // Packages //
    //////////////
    package: $ => seq(
      'package', $.packageIde, ';',
      repeat($.packageBody),
      'endpackage', optional(seq(':', $.packageIde))
    ),

    packageBody: $ => choice(
      $.exportDecl,
      $.importDecl,
      $.packageStmt
    ),

    exportDecl: $ => seq(
      'export', comma_sep($.exportItem), ';'),
    exportItem: $ => choice(
      seq($.identifier, optional('(..)')),
      seq($.Identifier, optional('(..)')),
      seq($.packageIde, '::', '*')
    ),

    importDecl: $ => seq('import', comma_sep($.importItem), ';'),
    importItem: $ => seq($.packageIde, '::', '*'),

    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl,
      $.typeDef,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      $.externCImport
      // externModuleImport
    ),

    packageIde: $ => $.Identifier,

    ///////////
    // Types //
    ///////////
    type: $ => choice(
      $.typePrimary,
      // Function type (revised)
      seq('function', $.type, $.identifier, '(', optional($.functionFormals), ')')
    ),

    typePrimary: $ => choice(
      seq($.typeIde, optional(seq('#', '(', comma_sep($.type), ')'))),
      $.typeNat,
      seq('bit', optional(seq('[', $.typeNat, ':', $.typeNat, ']'))),
      'int'
    ),

    // Polymorphism types starts with lowercase letters
    typeIde: $ => seq(optional(seq($.packageIde, '::')), choice($.Identifier, $.identifier)),
    typeNat: $ => $.decDigits,

    ///////////////
    // Interface //
    ///////////////
    interfaceDecl: $ => seq(
      optional($.attributeInstances),
      'interface', $.typeDefType, ';',
      repeat($.interfaceMemberDecl),
      'endinterface', optional(seq(':', $.typeIde))
    ),

    typeDefType: $ => seq($.typeIde, optional($.typeFormals)),
    typeFormals: $ => seq('#', '(', comma_sep($.typeFormal), ')'),
    typeFormal: $ => seq(optional('numeric'), 'type', $.identifier),

    interfaceMemberDecl: $ => choice(
      $.methodProto,
      $.subinterfaceDecl
    ),

    methodProto: $ => seq(
      optional($.attributeInstances),
      'method', $.type, $.identifier,
      optional(seq('(', optional($.methodProtoFormals), ')')),
      ';'
    ),
    methodProtoFormals: $ => comma_sep($.methodProtoFormal),
    methodProtoFormal: $ => seq(optional($.attributeInstances), $.type, $.identifier),

    subinterfaceDecl: $ => seq(
      optional($.attributeInstances), 'interface', $.type, $.identifier, ';'
    ),

    ////////////
    // Module //
    ////////////
    moduleDef: $ => seq(
      optional($.attributeInstances),
      $.moduleProto,
      repeat($.moduleStmt),
      'endmodule', optional(seq(':', $.identifier))
    ),

    moduleProto: $ => seq(
      'module', optional(seq('[', $.type, ']')), $.identifier,
      optional($.moduleFormalParams), '(', optional($.moduleFormalArgs), ')',
      optional($.provisos), ';'
    ),

    moduleFormalParams: $ => seq(
      '#', '(', comma_sep($.moduleFormalParam), ')'
    ),
    moduleFormalParam: $ => seq(
      optional($.attributeInstances),
      optional('parameter'), $.type, $.identifier
    ),

    moduleFormalArgs: $ => choice(
      seq(optional($.attributeInstances), $.type),
      comma_sep(seq(optional($.attributeInstances), $.type, $.identifier))
    ),

    moduleStmt: $ => choice(
      $.moduleInst,
      $.methodDef,
      $.subinterfaceDef,
      $.rule,
      $.varDo, $.varDeclDo,
      seq($.functionCall, ';'),
      $.systemTaskStmt,
      seq('(', $.expression, ')'),
      $.returnStmt,
      $.varDecl, $.varAssign,
      $.functionDef,
      $.moduleDef,
      $.moduleBeginEndStmt,
      $.moduleIfStmt,
      $.moduleCaseStmt,
      $.moduleWhileStmt,
      $.moduleForStmt
    ),

    moduleInst: $ => seq(
      optional($.attributeInstances),
      $.type, $.identifier, '<-', $.moduleApp, ';'
    ),
    moduleApp: $ => seq(
      $.identifier,
      seq('(', optional(comma_sep($.moduleActualParamArg)), ')')
    ),
    moduleActualParamArg: $ => choice(
      $.expression,
      seq('clocked_by', $.expression),
      seq('reset_by', $.expression)
    ),

    ////////////////////////
    // Method definitions //
    ////////////////////////
    methodDef: $ => choice(
      seq(
        'method', optional($.type), $.identifier,
        optional(seq('(', optional($.methodFormals), ')')),
        optional($.implicitCond), ';',
        optional($.functionBody),
        'endmethod', optional(seq(':', $.identifier))
      ),
      seq(
        'method', 'Action', $.identifier,
        optional(seq('(', optional($.methodFormals), ')')),
        optional($.implicitCond), ';',
        repeat($.actionStmt),
        'endmethod', optional(seq(':', $.identifier))
      ),
      seq(
        'method', 'ActionValue', '#', '(', $.type, ')', $.identifier,
        optional(seq('(', optional($.methodFormals), ')')),
        optional($.implicitCond), ';',
        repeat($.actionValueStmt),
        'endmethod', optional(seq(':', $.identifier))
      ),
      seq(
        'method', optional(choice(
          'Action',
          seq('ActionValue', '#', '(', $.type, ')'),
          $.type)
        ), $.identifier,
        optional(seq('(', optional($.methodFormals), ')')),
        optional($.implicitCond), '=', $.expression, ';'
      )
    ),

    methodFormals: $ => comma_sep($.methodFormal),
    methodFormal: $ => seq(optional($.type), $.identifier),
    implicitCond: $ => seq('if', '(', $.condPredicate, ')'),

    subinterfaceDef: $ => choice(
      seq(
        'interface', $.Identifier, $.identifier, ';',
        repeat($.interfaceStmt),
        'endinterface', optional(seq(':', $.identifier))
      ),
      seq('interface', optional($.type), $.identifier, '=', $.expression, ';')
    ),
    interfaceStmt: $ => choice(
      $.methodDef,
      $.subinterfaceDef,
      $.expressionStmt
    ),
    typeDef: $ => choice(
      $.typedefSynonym,
      $.typedefEnum,
      $.typedefStruct,
      $.typedefTaggedUnion
    ),

    typedefSynonym: $ => seq('typedef', $.type, $.typeDefType, ';'),

    typedefEnum: $ => seq(
      'typedef', 'enum', '{', $.typedefEnumElements, '}', $.Identifier,
      optional($.derives), ';'
    ),
    typedefEnumElements: $ => comma_sep($.typedefEnumElement),
    typedefEnumElement: $ => choice(
      seq($.Identifier, optional(seq('=', $.intLiteral))),
      seq($.Identifier, optional(seq('[', $.intLiteral, ']')), optional(seq('=', $.intLiteral))),
      seq(
        $.Identifier, optional(seq('[', $.intLiteral, ':', $.intLiteral, ']')),
        optional(seq('=', $.intLiteral))
      ),
    ),

    typedefStruct: $ => seq(
      'typedef', 'struct', '{',
      repeat($.structMember),
      '}', $.typeDefType, optional($.derives), ';'
    ),
    typedefTaggedUnion: $ => seq(
      'typedef', 'union', 'tagged', '{',
      repeat($.unionMember),
      '}', $.typeDefType, optional($.derives), ';'
    ),
    structMember: $ => choice(
      seq($.type, $.identifier, ';'),
      seq($.subUnion, $.identifier, ';')
    ),
    unionMember: $ => choice(
      seq($.type, $.Identifier, ';'),
      seq($.subStruct, $.Identifier, ';'),
      seq($.subUnion, $.Identifier, ';'),
      seq('void', $.Identifier, ';')
    ),
    subStruct: $ => seq(
      'struct', '{',
      repeat($.structMember),
      '}'
    ),
    typeclassIde: $ => $.Identifier,
    typeFormals: $ => seq('#', '(', comma_sep($.typeFormal), ')'),
    typeFormal: $ => seq(optional('numeric'), 'type', $.typeIde),
    derives: $ => seq('deriving', '(', comma_sep($.typeclassIde), ')'),

    //////////////////////////////////////////
    // Variable declarations and statements //
    //////////////////////////////////////////
    varDecl: $ => choice(
      seq($.type, comma_sep($.varInit), ';'),
      prec(PREC.ASSIGN, seq('let', $.identifier, '=', $.expression, ';'))
    ),
    varInit: $ => seq($.identifier, optional($.arrayDims), optional(seq('=', $.expression))),
    functionBody: $ => choice(
      $.actionBlock,
      $.actionValueBlock,
      repeat1($.functionBodyStmt)
    ),
    functionBodyStmt: $ => choice(
      $.returnStmt,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.moduleDef,
      $.functionBodyBeginEndStmt,
      $.functionBodyIfStmt,
      $.functionBodyCaseStmt,
      $.functionBodyWhileStmt,
      $.functionBodyForStmt
    ),
    returnStmt: $ => seq('return', $.expression, ';'),

    expression: $ => choice(
      $.condExpr,
      $.operatorExpr,
      $.exprPrimary
    ),
    exprPrimary: $ => choice(
      seq(optional(seq($.packageIde, '::')), $.identifier),
      seq(optional(seq($.packageIde, '::')), $.Identifier),
      $.intLiteral,
      $.realLiteral,
      $.stringLiteral,
      $.systemFunctionCall,
      seq('valueof', '(', $.type, ')'),
      seq('valueOf', '(', $.type, ')'),
      seq('(', $.expression, ')'),
      '?',  // Don't-care expressions
      $.bitConcat, $.bitSelect,
      $.beginEndExpr,
      $.actionBlock,
      $.actionValueBlock,
      $.functionCall,
      $.methodCall,
      $.typeAssertion,
      $.structExpr,
      prec(PREC.FIELD, seq($.exprPrimary, '.', $.identifier)),  // Struct member selection
      $.taggedUnionExpr,
      $.interfaceExpr,
      $.rulesExpr,
      $.caseExpr,
      prec(PREC.STMT, $.seqFsmStmt),
      prec(PREC.STMT, $.parFsmStmt),
      "True", "False", "noAction"
    ),

    condExpr: $ => prec.right(PREC.COND, seq(
      $.condPredicate, '?', $.expression, ':', $.expression
    )),
    condPredicate: $ => seq($.exprOrCondPattern, repeat(seq('&&&', $.exprOrCondPattern))),
    exprOrCondPattern: $ => prec(PREC.COND_PATTERN, choice(
      $.expression,
      seq($.expression, 'matches', $.pattern)
    )),

    operatorExpr: $ => choice(
      $.unaryExpr,
      $.binaryExpr,
    ),

    unaryExpr: $ => {
      const table = [
        ['+', PREC.UNOP_PLUS],
        ['-', PREC.UNOP_PLUS],
        ['!', PREC.UNOP_PLUS],
        ['~', PREC.UNOP_PLUS],
        ['&', PREC.UNOP_AND],
        ['~&', PREC.UNOP_NAND],
        ['|', PREC.UNOP_OR],
        ['~|', PREC.UNOP_NOR],
        ['^', PREC.UNOP_XOR],
        ['~^', PREC.UNOP_XNOR],
        ['^~', PREC.UNOP_XNOR]
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec(precedence, seq(
          field('unary_operator', operator),
          field('unary_right', $.expression),
        ));
      }));

    },

    binaryExpr: $ => {
      const table = [
        ['*', PREC.BINOP_MUL],
        ['/', PREC.BINOP_MUL],
        ['%', PREC.BINOP_MUL],
        ['+', PREC.BINOP_ADD],
        ['-', PREC.BINOP_ADD],
        ['<<', PREC.BINOP_SHT],
        ['>>', PREC.BINOP_SHT],
        ['<=', PREC.BINOP_COMP],
        ['>=', PREC.BINOP_COMP],
        ['<', PREC.BINOP_COMP],
        ['>', PREC.BINOP_COMP],
        ['==', PREC.BINOP_EQ],
        ['!=', PREC.BINOP_EQ],
        ['&', PREC.BINOP_AND],
        ['^', PREC.BINOP_XOR],
        ['~^', PREC.BINOP_XNOR],
        ['^~', PREC.BINOP_XNOR],
        ['|', PREC.BINOP_OR],
        ['&&', PREC.BINOP_LOGIC_AND],
        ['||', PREC.BINOP_LOGIC_OR]
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('binary_left', $.expression),
          field('binary_operator', operator),
          field('binary_right', $.expression),
        ));
      }));
    },

    attributeInstances: $ => repeat1($.attributeInstance),
    attributeInstance: $ => seq('(*', comma_sep($.attrSpec), '*)'),
    attrSpec: $ => seq($.attrName, optional(seq('=', $.expression))),
    attrName: $ => choice($.identifier, $.Identifier),

    //////////////////////
    // Integer literals //
    //////////////////////
    intLiteral: $ => choice(
      '\'0',
      '\'1',
      $.sizedIntLiteral,
      $.unsizedIntLiteral
    ),

    unsizedIntLiteral: $ => prec.left(choice(
      seq(optional($.sign), $.baseLiteral),
      seq(optional($.sign), $.decNum)
    )),

    decNum: $ => token(seq(/[0-9]+/, optional(/[0-9_]+/))),

    decDigits: $ => /[0-9]+/,
    stringLiteral: $ => seq('"', repeat(choice(
      /\\[nt\\"vfa]/,
      /\\[0-7]{3}/,
      /\\x[0-9A-Fa-f]{2}/,
      /[^"\\]/),
    ), '"'),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    identifier: $ => token(seq(LOWER_CASE_CHARS, IDENTIFIER_CHARS))
  }
});

function beginEndStmt($, stmt) {
  return seq(
    'begin', optional(seq(':', $.identifier)),
    repeat(stmt),
    'end', optional(seq(':', $.identifier))
  );
}

function ifStmt($, stmt) {
  return prec.left(seq(
    'if', '(', $.condPredicate, ')',
    field('if_body', stmt),
    optional(seq('else', stmt))
  ));
}

function caseStmt($, stmt) {
  let caseItem = field('case_item', seq(comma_sep($.expression), ':', stmt));
  let defaultItem = field('default_item', seq('default', optional(':'), stmt));
  // cases matches
  return seq(
    'case', '(', $.expression, ')',
    repeat(caseItem),
    optional(defaultItem),
    'endcase'
  );
}

function whileStmt($, stmt) {
  return seq(
    'while', '(', $.expression, ')',
    field('while_body', stmt)
  );
}

function forStmt($, stmt) {
  let simpleVarAssign = seq($.identifier, '=', $.expression);
  let simpleVarDeclAssign = seq(optional($.type), $.identifier, '=', $.expression);
  let forOldInit = comma_sep(simpleVarAssign);
  let forNewInit = seq(
    $.type, $.identifier, '=', $.expression, repeat(seq(',', simpleVarDeclAssign))
  );
  let forInit = choice(
    forOldInit,
    forNewInit
  );
  let forTest = $.expression;
  let varIncr = seq($.identifier, '=', $.expression);
  let forIncr = comma_sep(varIncr);
  return seq(
    'for', '(', forInit, ';', forTest, ';', forIncr, ')',
    field('for_body', stmt)
  );
}

function comma_sep(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
